--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -133,6 +133,15 @@ ul.foot_nav{
   color: #ffd013;
   text-decoration: underline;
 }
+
+.footer-section {
+  background-color: #232427;
+  display: block;
+  color: #fff;
+  text-align: center;
+  padding: 25px 0;
+}
+
 .btn-send{
   width: 12rem;
 }
